--- a/src/universidadg8/vistas/JPGuardarAlumno.form
+++ b/src/universidadg8/vistas/JPGuardarAlumno.form
@@ -43,33 +43,45 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
+          <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <Component id="jlFechaNacGuardarAlumno" min="-2" pref="106" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jCalGuardarAlumno" min="-2" pref="209" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jlNombreGuardarAlumno" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
+                          <Component id="jlNombreGuardarAlumno" alignment="1" min="-2" pref="100" max="-2" attributes="0"/>
                           <Component id="jlIconGuardarAlum" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
-                          <Component id="jlApellidoGuardarAlumno" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
-                          <Component id="jlDNIGuardarAlumno" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
+                          <Component id="jlApellidoGuardarAlumno" alignment="1" min="-2" pref="100" max="-2" attributes="0"/>
+                          <Component id="jlDNIGuardarAlumno" alignment="1" min="-2" pref="100" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jtfDNIGuardarAlumno" min="-2" pref="205" max="-2" attributes="0"/>
-                          <Component id="jtfApellidoGuardarAlumno" min="-2" pref="205" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="jLabel1" pref="205" max="32767" attributes="0"/>
-                              <Component id="jtfNombreGuardarAlumno" max="32767" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
+                              <Component id="jLabel1" min="-2" pref="205" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="jtfApellidoGuardarAlumno" min="-2" pref="205" max="-2" attributes="0"/>
+                                  <Component id="jtfNombreGuardarAlumno" min="-2" pref="205" max="-2" attributes="0"/>
+                                  <Component id="jtfDNIGuardarAlumno" alignment="0" min="-2" pref="205" max="-2" attributes="0"/>
+                              </Group>
                           </Group>
                       </Group>
                   </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Component id="jlFechaNacGuardarAlumno" min="-2" pref="106" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Group type="102" attributes="0">
+                              <Component id="jbBorrarGuardarAlumno" min="-2" pref="100" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="jbGuardarGuardarAlumno" max="32767" attributes="0"/>
+                          </Group>
+                          <Component id="jCalGuardarAlumno" min="-2" pref="209" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
               </Group>
-              <EmptySpace min="30" max="32767" attributes="0"/>
+              <EmptySpace pref="30" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -81,29 +93,32 @@
                   <Component id="jlIconGuardarAlum" min="-2" pref="50" max="-2" attributes="0"/>
                   <Component id="jLabel1" min="-2" pref="44" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jlNombreGuardarAlumno" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
                   <Component id="jtfNombreGuardarAlumno" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
+                  <Component id="jlNombreGuardarAlumno" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jlApellidoGuardarAlumno" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
                   <Component id="jtfApellidoGuardarAlumno" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
+                  <Component id="jlApellidoGuardarAlumno" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Component id="jlDNIGuardarAlumno" min="-2" pref="28" max="-2" attributes="0"/>
-                  <Component id="jtfDNIGuardarAlumno" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="jtfDNIGuardarAlumno" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
+                  <Component id="jlDNIGuardarAlumno" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <Component id="jlFechaNacGuardarAlumno" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="138" max="32767" attributes="0"/>
-                  </Group>
-                  <Component id="jCalGuardarAlumno" pref="153" max="32767" attributes="0"/>
+                  <Component id="jCalGuardarAlumno" min="-2" pref="120" max="-2" attributes="0"/>
+                  <Component id="jlFechaNacGuardarAlumno" min="-2" max="-2" attributes="0"/>
               </Group>
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="jbBorrarGuardarAlumno" pref="36" max="32767" attributes="0"/>
+                  <Component id="jbGuardarGuardarAlumno" max="32767" attributes="0"/>
+              </Group>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -150,7 +165,17 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Yu Gothic Medium" size="18" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Guardar Alumno"/>
+        <Property name="text" type="java.lang.String" value="Ingresar Datos"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="jbBorrarGuardarAlumno">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Borrar"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="jbGuardarGuardarAlumno">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Guardar"/>
       </Properties>
     </Component>
   </SubComponents>
